# coldchain-marl

./: .gitignore  DONE.md  README.md  STATUS.md  TODO.md  main.py  pyproject.toml
core/: config.py  demand.py  dynamics.py  fruits.py  graph.py  graph_features.py  intention.py  noise.py  observations.py  spaces.py  spoilage.py  state.py
core/interfaces/: intention.py  observations.py  spaces.py
core/world/: demand.py  fruits.py  graph_features.py  noise.py  spoilage.py
data/: dataset.py  generate.py  generate_demand.py  inspect.py  schema.py
data/demand/: demand.npz  manifest.json
docs/: DONE.md  TODO.md
docs/status/: 2026-07-14.md  2026-07-16.md  2026-07-20.md
env/: pettingzoo_adapter.py  rllib_adapter.py  scenarios.py  training_env.py
llm/: __init__.py  client.py  generate_bank.py  mediation.py  negotiation.py  scenarios.py
notebooks/: agent_behavior.ipynb  dataset_report.ipynb  training_report.ipynb  transformer_report.ipynb
training/: agents.py  config.py  env.py  evaluate.py  evaluate_forecaster.py  forecaster.py  gnn.py  loop.py  maddpg.py  module.py  pretrain_spoilage.py  train.py  train_forecaster.py
training/forecaster/: evaluate.py  model.py  train.py
training/marl/: agents.py  evaluate.py  fingerprint.py  gnn.py  loop.py  maddpg.py  negotiation_eval.py  pretrain_spoilage.py  stress_eval.py  train.py
viz/: __init__.py  api.py  dashboard.py  inference.py  live.py  record.py  serve.py  server.py
viz/web/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.ts
viz/web/src/: App.tsx  Plot.tsx  api.ts  format.ts  graphLayout.ts  styles.css  types.ts  vite-env.d.ts
viz/web/src/components/: AgentsPanel.tsx  CargoPanel.tsx  GraphView.tsx  HoverCard.tsx  InventoryPanel.tsx  MediatorSwitch.tsx  NegotiationPanel.tsx  StepBar.tsx  SystemBar.tsx
viz/web/src/hooks/: useLiveStream.ts
