[project]
name = "coldchain-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pettingzoo>=1.26.1",
    "ray[rllib]>=2.55.1",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
