[project]
name = "coldchain-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "pettingzoo>=1.26.1",
    "tensordict>=0.13.0",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
    "torchrl>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
notebook = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.4",
]
